--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       display: flex;
       height: 100vh;
       transition: transform 0.4s ease-in-out;
+      height: 100vh;
     }
 
     .panel {	
@@ -44,6 +45,12 @@
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
       color: var(--text-light);
       border: 1px solid rgba(255, 255, 255, 0.3);
+
+      flex: 0 0 100vw;
+      width: 100vw;
+      height: 100vh;
+      flex-shrink: 0;
+      box-sizing: border-box;
     }
 
     .panel-overlay {
@@ -222,9 +229,10 @@
     }
 
     @media (min-width: 1024px) {
-      .panel {
-        flex: 0 0 33.333vw;
-        height: 100vh;
+    .panel {
+      flex: 0 0 33.333vw;
+      width: 33.333vw;
+      }
       }
 
       .locations {
