--- a/index.html
+++ b/index.html
@@ -128,17 +128,29 @@
     }
 
     .social-links {
-     margin-top: 5rem;
+     margin-top: 0rem;
      text-align: center;
-     padding-bottom: 1rem;
+     padding-bottom: 0rem;
+    }
+
+   .social-links a {
+     color: var(--accent);
+     text-decoration: none;
+     font-weight: 500;
+     transition: color 0.2s ease;
+    }
+
+    .social-links a:hover {
+     color: #fff;
+     text-decoration: none;
     }
 
     h2 {
-      font-weight: 700;
-      font-size: 3.6rem;
-      color: var(--accent);
-      margin-bottom: 1rem;
-      text-align: center;
+     font-weight: 700;
+     font-size: 3.6rem;
+     color: var(--accent);
+     margin-bottom: 1rem;
+     text-align: center;
     }
 
     h3 {
