--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
       text-decoration: none;
       color: #fff;
      }
+
+
+td {
+  height: 50px;
+  vertical-align: bottom;
+
   </style>
 </head>
 <body>
@@ -363,6 +369,7 @@ const originalPanels = [
     title: "Spices",
     background: "url('https://i.postimg.cc/tgFnnNV5/Brochure-HTML-Panel-Page-3.png') center/cover no-repeat",
     content: `
+      <ul style="text-align:center;">Sold by the Pound</ul>
       <h3>Chile (Peppers)</h3>
       <ul>
         <li>Arbol (Roasted or Regular)</li>
@@ -412,7 +419,7 @@ const originalPanels = [
       <h3>Snacks and Treats</h3>
       <ul>
         <li>Haba Beans with Lime</li>
-        <li>Haba Beans with Lime & Chilli)</li>
+        <li>Haba Beans with Lime & Chilli</li>
         <li>Salted Peanuts with Lime</li>
         <li>Salted Peanuts with Lime and Chili (Habanero or Arbol Chili)</li>
         <li>Mangos with Chamoy</li>
@@ -442,7 +449,9 @@ const originalPanels = [
         <li>13" Burrito Size</li>
         <li>14" Burrito Size</li>
       </ul>
+
       <h3>Specialty Flour</h3>
+        <ul>
         <li>Sonora Style</li>
         <li>Wheat</li>
         <li>Tomato</li>
@@ -452,11 +461,12 @@ const originalPanels = [
         <li>Curry</li>
         <li>Charcoal</li>
         <li>Achiote</li>
+        </ul>
     `
   },
   {
     title: "Corn Tortilla",
-    background: "url('https://i.postimg.cc/C1WTqbTF/Brochure-HTML-Panel-Page-5.png') center/cover no-repeat",
+    background: "url('https://i.postimg.cc/mrGTXpQd/p6-quickfix.png') center/cover no-repeat",
     content: `
       <h3>Corn Masa (5 or 10 lbs.)</h3>
       <ul>
