--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Graciana Trifold</title>
   <style>
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
     :root {
@@ -33,13 +36,12 @@
       display: flex;
       height: 100vh;
       transition: transform 0.4s ease-in-out;
-      height: 100vh;
     }
 
     .panel {	
       position: relative;
       border-radius: var(--radius);
-      overflow: hidden; /* This clips the overlay to the rounded corners */
+      overflow: hidden;
       background: var(--panel-glass);
       backdrop-filter: blur(0px);
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
@@ -58,7 +60,7 @@
       top: 0;
       left: 0;
       right: 0;
-      bottom: 0;  /* Ensures the overlay fills the entire panel */
+      bottom: 0;
       z-index: 0;
       pointer-events: none;
       border-radius: inherit;
@@ -70,9 +72,9 @@
       height: 100%;
       position: relative;
       z-index: 1;
-      padding: 2rem;  /* This padding is inside, affecting the content area */
-      padding-bottom: 3.5rem
-      margin-top: 0; /* Ensures there's no unwanted space above the content */
+      padding: 2rem;
+      padding-bottom: 3.5rem;
+      margin-top: 0;
       box-sizing: border-box;
     
 
@@ -80,7 +82,6 @@
        scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
      }
 
-     /* WebKit scrollbar styling (Chrome, Edge, Safari) */
      .panel-content::-webkit-scrollbar {
        width: 8px;
      }
@@ -100,13 +101,6 @@
      overflow: hidden;
     }
 
-   .panel-content {
-     overflow-y: auto;
-     max-height: 100%;
-     padding-right: 1rem;
-     scroll-behavior: smooth;
-    }
-
    .panel-fade {
      content: "";
      position: absolute;
@@ -124,7 +118,7 @@
      height: auto;
      display: block;
      margin: 0 auto;
-     opacity: 0.85;
+     opacity: 0.7;
     }
 
     .social-links {
@@ -206,9 +200,9 @@
 
      .locations {
        display: flex;
-       flex-direction: row; /* Two cards side by side */
+       flex-direction: row;
        justify-content: space-around;
-       flex-wrap: wrap; /* Allow stacking on very small screens */
+       flex-wrap: wrap;
        background: rgba(255, 255, 240, 0.5);
        filter: drop-shadow(15px 25px 20px black);
        padding: 2rem;
@@ -219,7 +213,7 @@
      }
 
      .location-card {
-       flex: 1 1 300px; /* Grow/shrink with screen size, min 300px width */
+       flex: 1 1 300px;
        max-width: 400px;
        text-align: center;
        color: black;
@@ -231,13 +225,13 @@
      .location-card h3 {
        color: #ff821c;
        filter: drop-shadow(2px 3px 7px brown);
-       font-size: clamp(1.5rem, 2.5vw, 2.5rem); /* Responsive font size */
+       font-size: clamp(1.5rem, 2.5vw, 2.5rem);
        margin-bottom: 0.5rem;
      }
 
      .location-card p {
-       color: black !important;
-       font-size: clamp(0.875rem, 1.8vw, 1.1rem); /* Responsive paragraph text */
+       color: black;
+       font-size: clamp(0.875rem, 1.8vw, 1.1rem);
      }
 
     @media (min-width: 1024px) {
@@ -248,15 +242,13 @@
       }
 
       .locations {
-        flex-direction: row;
-        justify-content: space-around;
         flex-wrap: nowrap;
       }
 
       .location-card {
         flex: 0 0 auto;
       }
-      }
+
    a {
      color: var(--accent);
      text-decoration: none;
@@ -269,10 +261,15 @@
       color: #fff;
      }
 
-
-td {
-  height: 50px;
-  vertical-align: bottom;
+  
+    .location-card a {
+      color: black;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+    .location-card a:hover {
+      color: white;
+    }
 
   </style>
 </head>
@@ -340,12 +337,12 @@ const originalPanels = [
         <div class="location-card">
           <h1>Sylmar<br/>Location</h1>
           <p>
-            12239 Foothill Blvd,<br/>Sylmar, CA<br/>
-            (818) 897-2079
+            <a href="https://maps.app.goo.gl/GznKDzucmNwPy2wP8" target="_blank">12239 Foothill Blvd,</br>Sylmar, CA 91342</a><br/>
+            <a href="tel:+18188972079">(818) 897-2079</a>
           </p>
           <h3>Hours</h3>
           <p>
-            Mon - Sat<br/>
+            Monday - Saturday<br/>
             6:00AM - 5:00PM
           </p>
         </div>
@@ -353,12 +350,12 @@ const originalPanels = [
         <div class="location-card">
           <h1>Bakersfield<br/>Location</h1>
           <p>
-            530 California Ave,<br/>Bakersfield, CA<br/>
-            (661) 381-4722
+            <a href="https://maps.app.goo.gl/5rD36bT492RHwwUG9" target="_blank">530 California Ave,</br>Bakersfield, CA 93304</a></br>
+            <a href="tel:+16613814722">(661) 381-4722</a>
           </p>
           <h3>Hours</h3>
           <p>
-            Mon - Sat<br/>
+            Monday - Saturday<br/>
             8:00AM - 5:00PM
           </p>
         </div>
@@ -421,7 +418,7 @@ const originalPanels = [
         <li>Haba Beans with Lime</li>
         <li>Haba Beans with Lime & Chilli</li>
         <li>Salted Peanuts with Lime</li>
-        <li>Salted Peanuts with Lime and Chili (Habanero or Arbol Chili)</li>
+        <li>Salted Peanuts with Lime and Chili (Habanero or Arbol)</li>
         <li>Mangos with Chamoy</li>
         <li>Garbanzos with Lime & Chili</li>
         <li>Japanese Peanuts</li>
