--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@ const originalPanels = [
     `
   },
   {
-    title: "Flour Tortilla",
+    title: "Flour Products",
     background: "url('https://i.postimg.cc/jj3rRGMn/Brochure-HTML-Panel-Page-4.png') center/cover no-repeat",
     content: `
-      <h3> Regular Flour</h3>
+      <h3> Regular Flour Tortillas</h3>
       <ul>
         <li>6" Snack Size</li>
         <li>8" Gordita size</li>
@@ -447,7 +447,7 @@ const originalPanels = [
         <li>14" Burrito Size</li>
       </ul>
 
-      <h3>Specialty Flour</h3>
+      <h3>Specialty Flour Tortillas</h3>
         <ul>
         <li>Sonora Style</li>
         <li>Wheat</li>
@@ -462,20 +462,28 @@ const originalPanels = [
     `
   },
   {
-    title: "Corn Tortilla",
+    title: "Corn Products",
     background: "url('https://i.postimg.cc/mrGTXpQd/p6-quickfix.png') center/cover no-repeat",
     content: `
-      <h3>Corn Masa (5 or 10 lbs.)</h3>
+      <h3>Corn Masa</h3>
+      <ul style="text-align:center;">Sold in 5, 10, or 25 lbs.</ul>
       <ul>
         <li>White</li>
-        <li>Yellow/li>
+        <li>Yellow</li>
         <li>Blue</li>
+        <li>Prepared for Tamales</li>
+        <li>Unprepared for Tamales</li>
       </ul>
       <h3>Regular Tortillas</h3>
+      <ul style="text-align:center;">Offered in White or Yellow corn</ul>
       <ul>
         <li>6" Corn 3dz "Family Pack"</li>
         <li>6" Corn 5dz.</li>
         <li>6" Corn 90ct "Fiesta Pack"/li>
+        <li>10" Corn 1dz./li>
+        </ul>
+         <h3>Special Tortilla for Enchiladas</h3>
+        <ul>
         <li>6 1/2" "Enchilada" 5dz. 67.5oz.</li>
         <li>6 1/2" "Enchilada Pesada" 90oz.</li>
       </ul>
